--- a/Compare de Dados/index.html
+++ b/Compare de Dados/index.html
@@ -13,7 +13,7 @@
     <NAV>
         <H1>GRÁFICO DE COMPARAÇÃO DOS DADOS COLETADOS</H1>
         <Ul>
-            <li><a class="btn-link" href="c:\Users\erica\OneDrive\Desktop\Omar\PJI410\index.HTML">HOME</a></li>           
+            <li><a class="btn-link" href="https://omarcardoso75.github.io/PJI410/index.HTML">HOME</a></li>           
         </Ul>
     </NAV>
 
