--- a/Indice de Calor/index.html
+++ b/Indice de Calor/index.html
@@ -13,7 +13,7 @@
     <NAV>
         <H1>ÍNDICES DE CALOR REGISTRADAS PELO SENSOR IoT DE ABR/22 À JAN/23</H1>
         <Ul>
-            <li><a class="btn-link" href="c:\Users\erica\OneDrive\Desktop\Omar\PJI410\index.HTML">HOME</a></li>           
+            <li><a class="btn-link" href="https://omarcardoso75.github.io/PJI410/index.HTML">HOME</a></li>           
         </Ul>
     </NAV>
 
